# django-prod-template

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
apps/app_1/: apps.py  urls.py  views.py
apps/example_calculator_app/: apps.py  serializers.py  urls.py  views.py
apps/example_greeter_app/: apps.py  urls.py  views.py
config/: asgi.py  gunicorn_conf.py  logging_config.py  middleware.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
scripts/: render-build.sh
